# xa-tags

./: AUTHORS  CMakeLists.txt  Changelog  INSTALL  README  make-clean.sh
cmake/Modules/: FindSqlite3.cmake
debian/: README.Debian  changelog  control  copyright  manpage.1.ex  rules  watch.ex  xa-tags-common.install  xa-tags-embedded.install  xa-tags.install
doc/: Doxyfile  commands-and-data-types.txt  commands-and-db-operations.txt  db-create-v2.sql  db-create.sql  db-schema.sqlite3  db-update-v1-v2.sql  db.sqlite3  options.txt  search.txt  support-for-xattrs.txt  xa-tags_v2_proto.yaml  xa-tags_v3_proto.txt
po/: CMakeLists.txt  ru.po
src/: CMakeLists.txt  Makefile  buf.c  buf.h  client.c  common.c  common.h  conn.c  conn.h  crc24.c  crc32.c  daemon.c  data.c  data.h  db.c  db.h  file.c  file.h  handlers.c  handlers.h  list.c  list.h  log.c  log.h  main.h  msg.h  options.h  proto.c  proto.h  search.c  search.h  tool-embedded.c  tool.c  uuid.c  uuid.h  wrappers.h
src/client/: dumb_tool.inc.c  smart_tool.inc.c  usage.inc.c  usage_basic.inc.c  usage_common.inc.c  usage_search.inc.c  usage_update.inc.c
src/usage/: basic.c.inc  convert_storage.inc.c  db_misc.c.inc  update.inc.c
tests/: CMakeLists.txt  tests.h
tests/buf/: CMakeLists.txt  buf_extend.c  buf_reduce.c
tests/common/: CMakeLists.txt  get_dirhash.c  memmem.c  normalize_path.c
tests/data/: CMakeLists.txt  data_copy.c  data_item_add.c  data_item_del.c  data_item_search.c  data_items_merge.c  data_items_split.c  data_items_walk.c  data_merge.c  data_parse_tags.c  data_validate.c
tests/file/: CMakeLists.txt  file_tags_clr.c  file_tags_get.c  file_tags_get_bulk.c  file_tags_set.c  file_uuid_clr.c  file_uuid_get.c  file_uuid_set.c
tests/list/: CMakeLists.txt  list_copy.c  list_idx.c  list_item_add.c  list_item_del.c  list_item_search.c  list_items_merge.c  list_items_split.c  list_items_walk.c  list_merge.c  list_parse_tags.c  list_validate.c
tests/proto/: CMakeLists.txt  ipc_req_rd.c  ipc_req_rd_1.c  ipc_req_rd_2.c  ipc_req_rd_3.c  ipc_req_rd_4.c  ipc_resp_wr.c  ipc_resp_wr_1.c  parse_buf.c  parse_buf_1.c  parse_buf_2.c  parse_buf_3.c  parse_buf_4.c  test_map_of_uuid_and_tags.inc  validate_data.c
tests/samples/: test_list_of_files.inc  test_list_of_uuids.inc  test_map_of_uuid_and_file.inc  test_map_of_uuid_and_tags.inc
tests/scripts/: CMakeLists.txt  dumb-tool-basic.test  dumb-tool-extended.test  smart-tool-basic.test.in
tests/search/: CMakeLists.txt  parse_search_terms.c  search_free.c  search_match_exact.c  search_match_regex.c  search_match_substr.c  search_parse_terms.c
tests/uuid/: CMakeLists.txt  uuid_generate.c  uuid_id_parse.c  uuid_id_validate.c  uuid_parse.c
