ENABLE_TESTING()

ADD_SUBDIRECTORY("buf")
ADD_SUBDIRECTORY("common")
ADD_SUBDIRECTORY("data")
ADD_SUBDIRECTORY("file")
ADD_SUBDIRECTORY("proto")
ADD_SUBDIRECTORY("uuid")

FIND_PROGRAM(SHELLTEST_EXEC "shelltest")
IF    (SHELLTEST_EXEC)
  ADD_SUBDIRECTORY("scripts")
ELSE  (SHELLTEST_EXEC)
  MESSAGE(STATUS "shelltest not found, testing scripts disabled")
ENDIF (SHELLTEST_EXEC)
