SET(SRC_DIR "../../src")

ADD_EXECUTABLE("file_tags_get"      "file_tags_get.c")
ADD_EXECUTABLE("file_tags_set"      "file_tags_set.c")
ADD_EXECUTABLE("file_tags_clr"      "file_tags_clr.c")
ADD_EXECUTABLE("file_tags_get_bulk" "file_tags_get_bulk.c")
ADD_EXECUTABLE("file_uuid_get"      "file_uuid_get.c")
ADD_EXECUTABLE("file_uuid_set"      "file_uuid_set.c")
ADD_EXECUTABLE("file_uuid_clr"      "file_uuid_clr.c")

TARGET_LINK_LIBRARIES("file_tags_get"      "tests")
TARGET_LINK_LIBRARIES("file_tags_set"      "tests")
TARGET_LINK_LIBRARIES("file_tags_clr"      "tests")
TARGET_LINK_LIBRARIES("file_tags_get_bulk" "tests")
TARGET_LINK_LIBRARIES("file_uuid_get"      "tests")
TARGET_LINK_LIBRARIES("file_uuid_set"      "tests")
TARGET_LINK_LIBRARIES("file_uuid_clr"      "tests")

ADD_TEST("file/tags_get"        "file_tags_get")
ADD_TEST("file/tags_set"        "file_tags_set")
ADD_TEST("file/tags_clr"        "file_tags_clr")
ADD_TEST("file/tags_get_bulk"   "file_tags_get_bulk")
ADD_TEST("file/uuid_get"        "file_uuid_get")
ADD_TEST("file/uuid_set"        "file_uuid_set")
ADD_TEST("file/uuid_clr"        "file_uuid_clr")
