SET(SRC_DIR "../../src")

ADD_EXECUTABLE("list_validate"       "list_validate.c")
ADD_EXECUTABLE("list_item_add"       "list_item_add.c")
ADD_EXECUTABLE("list_item_del"       "list_item_del.c")
ADD_EXECUTABLE("list_items_walk"     "list_items_walk.c")
ADD_EXECUTABLE("list_items_split"    "list_items_split.c")
ADD_EXECUTABLE("list_items_merge"    "list_items_merge.c")
ADD_EXECUTABLE("list_parse_tags"     "list_parse_tags.c")
ADD_EXECUTABLE("list_item_search"    "list_item_search.c")
ADD_EXECUTABLE("list_merge"          "list_merge.c")
ADD_EXECUTABLE("list_copy"           "list_copy.c")
ADD_EXECUTABLE("list_idx"            "list_idx.c")

TARGET_LINK_LIBRARIES("list_validate"       "tests")
TARGET_LINK_LIBRARIES("list_item_add"       "tests")
TARGET_LINK_LIBRARIES("list_item_del"       "tests")
TARGET_LINK_LIBRARIES("list_items_walk"     "tests")
TARGET_LINK_LIBRARIES("list_items_split"    "tests")
TARGET_LINK_LIBRARIES("list_items_merge"    "tests")
TARGET_LINK_LIBRARIES("list_parse_tags"     "tests")
TARGET_LINK_LIBRARIES("list_item_search"    "tests")
TARGET_LINK_LIBRARIES("list_merge"          "tests")
TARGET_LINK_LIBRARIES("list_copy"           "tests")
TARGET_LINK_LIBRARIES("list_idx"            "tests")

ADD_TEST("list/validate"        "list_validate")
ADD_TEST("list/item_add"        "list_item_add")
ADD_TEST("list/item_del"        "list_item_del")
ADD_TEST("list/items_walk"      "list_items_walk")
ADD_TEST("list/items_split"     "list_items_split")
ADD_TEST("list/items_merge"     "list_items_merge")
ADD_TEST("list/parse_tags"      "list_parse_tags")
ADD_TEST("list/item_search"     "list_item_search")
ADD_TEST("list/merge"           "list_merge")
ADD_TEST("list/copy"            "list_copy")
ADD_TEST("list/idx"             "list_idx")
